--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://live.staticflickr.com/65535/51111961507_13fcccb0bd_o.png" height="100" alt="KH_monogram">            
       <h1>Clayton Posey</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
