--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Grab your camera and go to where you want to shoot</h3>
+              <p>Make sure you are brainstorming ideas and thinking about your composition.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Find your subject wether it's a person or something you found outside.</h3>
+              <p>Remember, creativty is key!</p>
 
               <!--
 This block contains a photo and has a caption.
