--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Frame your subject, maing sure you are paying attention to compostion and snap away!</h3>
+              <p>Make sure your camera has correct settings for the lighting situation.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
