--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Review your images, making sure your exposure is correct.</h3>
+              <p>This is important to making sure your final image looks great!</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Bring your images into any editing software and edit however you feel fit.</h3>
+              <p>This is your chance to edit your image to fit your vision, make sure your being creative!</p> 
             </div>
           </li>
 
