--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#d8e2dc;         /* CHANGE THE LINK COLOR HERE */
+        color:#3d405b;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
@@ -258,7 +258,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Helvetica, sans-serif;          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
