--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="https://www.flickr.com/photos/192736672@N05" title=""><img src="https://live.staticflickr.com/65535/51127178375_8da640e2ea_z.jpg" width="640" height="480" alt=""></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script> 
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption"></p>
             </div>
           </li>
 
