--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Frame your subject, maing sure you are paying attention to compostion and snap away!</h3>
+              <h3>Frame your subject, making sure you are paying attention to compostion and snap away!</h3>
               <p>Make sure your camera has correct settings for the lighting situation.</p>
 
 
