--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ with a paragraph to create a photo with a caption.
               <p>Make sure your camera has correct settings for the lighting situation.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=z6FhDanpCGo" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
